Fixed some HTML errors and changed listener for form submission

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width-device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Art Maker!</title>
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
@@ -22,15 +22,16 @@
     <div class="container">
       <h2>Choose Grid Size</h2>
       <form id="sizePicker">
-          <span>Grid Height:</span>
-          <input type="number" id="input_height" name="height" min="1" max="50" value="10">
-          <span>Grid Width:</span>
-          <input type="number" id="input_width" name="width" min="1" max="50" value="10">
+          <label for="input_height">Grid Height:</label>
+          <input type="number" id="input_height" name="height" min="1" max="50" value="10" required>
+          <label for="input_width">Grid Width:</label>
+          <input type="number" id="input_width" name="width" min="1" max="50" value="10" required>
           <input type="submit" id="grid-size-submit">
       </form>
 
       <h2>Choose A Color</h2>
       <input type="color" id="colorPicker">
+    </div>
   </section>
 
   <section id="canvas-section">
